AC_INIT(checkgroup.c)
AM_INIT_AUTOMAKE(cg, 0.4)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_SUBDIRS(libmap)
AC_SUBST(LIBOBJS)

# We want these before the checks, so the checks can modify their values.
test -z "$CFLAGS" && CFLAGS='-g -Wall' auto_cflags=1

AC_PROG_CC
AM_PROG_LEX

# covered by LEX-test above
# AC_DECL_YYTEXT

AC_CHECK_FUNCS(getopt_long, , [LIBOBJS="$LIBOBJS getopt1.o getopt.o"])
AC_REPLACE_FUNCS(hstrerror)

# we need zlib for CRC32
AC_CHECK_LIB(z, crc32, [], [echo Zlib is needed.; exit 1])
AC_CHECK_HEADER(zlib.h, [], [echo Zlib is needed.; exit 1])

AC_OUTPUT(Makefile regress/Makefile)
