AC_INIT(checkgroup.c)
AM_INIT_AUTOMAKE(cg, 0.4)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_SUBDIRS(libmap)
AC_SUBST(LIBOBJS)

# We want these before the checks, so the checks can modify their values.
#test -z "$CFLAGS" && CFLAGS='-g -Wall' auto_cflags=1

dnl programs

AC_PROG_CC
AM_PROG_LEX

# covered by LEX test above
# AC_DECL_YYTEXT

dnl libraries

AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(resolv, main)

dnl functions

AC_CHECK_FUNCS(getopt_long, , [LIBOBJS="$LIBOBJS getopt1.o getopt.o"])
AC_REPLACE_FUNCS(hstrerror)
need_snprintf=no
AC_CHECK_FUNCS(snprintf vsnprintf vasprintf, , [need_snprintf=yes])
if test $need_snprintf = yes
then
	LIBOBJS="$LIBOBJS snprintf.o"
fi

AC_OUTPUT(Makefile regress/Makefile)
