dnl Process this file with autoconf to produce a configure script.

dnl init

AC_INIT(new-map.c)
dnl AC_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libmap, 0.1)

# We want these before the checks, so the checks can modify their values.
test -z "$CFLAGS" && CFLAGS=-g auto_cflags=1

AC_PROG_CC
AC_PROG_RANLIB

AC_OUTPUT(Makefile)
