dnl Process this file with autoconf to produce a configure script.

dnl libmap -- associative arrays
dnl Copyright (C) 1996 Dieter Baron

dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Library General Public
dnl License as published by the Free Software Foundation; either
dnl version 2 of the License, or (at your option) any later version.

dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Library General Public License for more details.

dnl You should have received a copy of the GNU Library General Public
dnl License along with this library; if not, write to the Free
dnl Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

dnl init

AC_INIT(new-map.c)
AC_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libmap, 0.1)
AC_SUBST(LIBOBJS)

# We want these before the checks, so the checks can modify their values.
test -z "$CFLAGS" && CFLAGS=-g auto_cflags=1

dnl system type

dnl programs

AC_PROG_CC
AC_PROG_RANLIB

dnl libraries
dnl header files
dnl typedefs
dnl structures
dnl compiler characteristics
dnl library functions

AC_CHECK_FUNCS(strdup, , [LIBOBJS="$LIBOBJS $ac_func"])

dnl system services

dnl output

AC_OUTPUT(Makefile)
